[REZA] Add string resources for movie sorting

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Popular Movies</string>
+    <string name="text_sort_by">Sort by</string>
+    <string name="text_please_wait">Please wait …</string>
+    <string name="text_error">Something doesn\'t feels right.\nPlease try again.</string>
+    <string-array name="sort_by_options">
+        <item>Popularity</item>
+        <item>Top Rated</item>
+    </string-array>
 </resources>
