--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
         <item>Popularity</item>
         <item>Top Rated</item>
     </string-array>
+    <string name="text_movie_detail">Movie Detail</string>
+    <string name="text_average_vote">Average Vote</string>
+    <string name="text_release_date">Release Date</string>
 </resources>
